mejoras del sitio de confitmacion

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Confirmación de cuenta</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Tu cuenta ha sido confirmada</h1>
+    <div class="confirmation">
+        <h1>Tu cuenta ha sido confirmada.</h1>
+        <p>Gracias por elegirnos, ya puedes iniciar sesión en nuestra app.</p>
+    </div>
 </body>
 </html>
