mejoras del sitio de confitmacion

--- a/screens/confirmation.html
+++ b/screens/confirmation.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -12,4 +12,4 @@
         <p>Gracias por elegirnos, ya puedes iniciar sesión en nuestra app.</p>
     </div>
 </body>
-</html> -->
+</html>
