--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/27230.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Angel Muñoz</h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Systems Engineer, Help-Desk"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
