--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Currículum</h1>
-              <p class="mb-0">Mi trayectoria profesional como Ingeniero de Sistemas, especializado en soporte técnico y desarrollo web, con enfoque en la resolución de problemas y atención al cliente.</p>
+              <p class="mb-0">Mi trayectoria profesional como estudiante de Ingeniería de Sistemas, con más de 2000 horas de experiencia especializada en soporte técnico, resolución de problemas complejos y desarrollo web, enfocado en brindar soluciones eficientes y excelente atención al cliente.</p>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
 
             <div class="resume-item pb-0">
               <h4>Angel Muñoz Benavides</h4>
-              <p><em>Ingeniero de Sistemas con experiencia en soporte técnico y desarrollo web. Especializado en resolver problemas complejos, brindar excelente atención al cliente y desarrollar soluciones eficientes.</em></p>
+              <p><em>Estudiante de Ingeniería de Sistemas con más de 2000 horas de experiencia práctica en soporte técnico y desarrollo web. Especializado en resolver problemas complejos de hardware y software, brindar soporte remoto de calidad y desarrollar soluciones web eficientes con excelente atención al cliente.</em></p>
               <ul>
                 <li>Pasto, Nariño - Colombia</li>
                 <li>+57 3207844963</li>
@@ -111,9 +111,23 @@
             <h3 class="resume-title">Educación</h3>
             <div class="resume-item">
               <h4>Ingeniería de Sistemas</h4>
-              <h5>2015 - 2020</h5>
-              <p><em>Universidad Mariana, Pasto - Colombia</em></p>
-              <p>Formación integral en desarrollo de software, administración de sistemas, bases de datos y metodologías de desarrollo. Enfoque en solución de problemas tecnológicos y optimización de procesos.</p>
+              <h5>Febrero 2024 - Actualmente</h5>
+              <p><em>Centro de Estudios y Especializaciones Internacionales CEIE</em></p>
+              <p>Formación profesional en desarrollo de software, administración de sistemas, bases de datos y metodologías de desarrollo. Enfoque especializado en soporte técnico, resolución de problemas tecnológicos y optimización de procesos.</p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Especialista en Soporte de TI</h4>
+              <h5>Octubre 2023 - Enero 2024</h5>
+              <p><em>Colaboración Google y Coursera</em></p>
+              <p>Especialización en soporte técnico de tecnologías de la información, resolución de incidencias, mantenimiento de sistemas y atención al cliente especializada.</p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Técnico en Instalación de Servicios de Telecomunicaciones</h4>
+              <h5>Febrero 2012 - Noviembre 2012</h5>
+              <p><em>SENA - Centro Internacional de Producción Limpia - LOPE</em></p>
+              <p>Formación técnica en instalación, configuración y mantenimiento de servicios de telecomunicaciones, redes y sistemas de comunicación.</p>
             </div><!-- End Resume Item -->
 
           </div>
@@ -121,26 +135,65 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Experiencia Profesional</h3>
             <div class="resume-item">
+              <h4>Auxiliar de Bodega y Sistemas</h4>
+              <h5>Julio 2022 - Julio 2025</h5>
+              <p><em>Todo Tornillo - Pasto, Colombia</em></p>
+              <ul>
+                <li>Gestión de sistemas de inventario y organización de mercancía</li>
+                <li>Alistamiento y entrega de domicilios optimizando rutas de distribución</li>
+                <li>Manejo de vehículos tipo moto y motocarro para entregas</li>
+                <li>Calificación y control de calidad de mercancía entrante</li>
+                <li>Soporte en sistemas de gestión de bodega</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
               <h4>Especialista en Soporte Técnico</h4>
               <h5>2021 - Presente</h5>
-              <p><em>Freelance & Empresas Locales</em></p>
+              <p><em>Freelance & Empresas Locales - Pasto, Colombia</em></p>
               <ul>
-                <li>Resolución de incidencias técnicas de hardware y software</li>
-                <li>Atención al cliente y soporte remoto especializado</li>
-                <li>Mantenimiento preventivo y correctivo de equipos</li>
-                <li>Capacitación a usuarios finales en herramientas tecnológicas</li>
+                <li>Más de 2000 horas de experiencia en resolución de incidencias técnicas de hardware y software</li>
+                <li>Soporte remoto especializado y atención al cliente de alta calidad</li>
+                <li>Mantenimiento preventivo y correctivo de equipos de cómputo</li>
+                <li>Capacitación y asesoría a usuarios finales en herramientas tecnológicas</li>
+                <li>Diagnóstico y solución de problemas complejos de sistemas</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Operador de Logística</h4>
+              <h5>Octubre 2017 - Marzo 2020</h5>
+              <p><em>COLSERLOG (ENVIA) - Pasto, Colombia</em></p>
+              <ul>
+                <li>Gestión de cargue y descargue de mercancía regional</li>
+                <li>Zonificación y organización logística de envíos</li>
+                <li>Coordinación de reparto y distribución</li>
+                <li>Optimización de procesos de almacenamiento</li>
               </ul>
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>Desarrollador Web Junior</h4>
               <h5>2020 - 2021</h5>
-              <p><em>Proyectos Personales y Freelance</em></p>
+              <p><em>Proyectos Personales y Freelance - Pasto, Colombia</em></p>
               <ul>
-                <li>Desarrollo de sitios web responsivos con HTML, CSS y JavaScript</li>
-                <li>Implementación de soluciones web personalizadas</li>
-                <li>Optimización de rendimiento y experiencia de usuario</li>
+                <li>Desarrollo de más de 15 sitios web responsivos con HTML5, CSS3 y JavaScript</li>
+                <li>Implementación de soluciones web personalizadas usando Bootstrap Framework</li>
+                <li>Optimización de rendimiento web y mejora de experiencia de usuario</li>
                 <li>Mantenimiento y actualización de sitios web existentes</li>
+                <li>Colaboración directa con clientes para definir requerimientos</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <h3 class="resume-title">Habilidades Técnicas Destacadas</h3>
+            <div class="resume-item">
+              <h4>Tecnologías y Herramientas</h4>
+              <ul>
+                <li><strong>Desarrollo Web:</strong> HTML5, CSS3, JavaScript, Bootstrap Framework</li>
+                <li><strong>Programación:</strong> Python (Básico), Desarrollo Responsivo</li>
+                <li><strong>Soporte Técnico:</strong> Hardware, Software, Redes, Sistemas Operativos</li>
+                <li><strong>Herramientas:</strong> Soporte Remoto, Diagnóstico de Sistemas</li>
+                <li><strong>Soft Skills:</strong> Atención al Cliente, Resolución de Problemas, Comunicación Efectiva</li>
               </ul>
             </div><!-- End Resume Item -->
 
