--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Acerca de Mí</h1>
-              <p class="mb-0">Ingeniero de Sistemas con experiencia en soporte técnico y desarrollo web. Apasionado por crear soluciones eficientes y brindar excelente atención al cliente.</p>
+              <p class="mb-0">Estudiante de Ingeniería de Sistemas con experiencia en soporte técnico y desarrollo web. Apasionado por crear soluciones eficientes y brindar excelente atención al cliente.</p>
             </div>
           </div>
         </div>
@@ -87,14 +87,14 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Angel Muñoz">
           </div>
           <div class="col-lg-8 content">
-            <h2>Ingeniero de Sistemas &amp; Desarrollador Full Stack</h2>
+            <h2>Estudiante de Ingeniería de Sistemas &amp; Especialista en Soporte Técnico</h2>
             <p class="fst-italic py-3">
-              "Combinando experiencia en soporte operativo con pasión por el desarrollo de sistemas eficientes."
+              "Más de 2000 horas de experiencia resolviendo problemas tecnológicos complejos y desarrollando soluciones web eficientes."
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>23 Dic 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>23 Dic</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>angelmz1.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span>+57 3207844963</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Pasto - Colombia</span></li>
@@ -110,7 +110,7 @@
               </div>
             </div>
             <p class="py-3">
-              Como Ingeniero de Sistemas con sólida experiencia en soporte técnico, me especializo en resolver problemas complejos y desarrollar soluciones web eficientes. Mi enfoque se centra en la atención al detalle, la comunicación efectiva con clientes y la implementación de tecnologías modernas para crear experiencias digitales excepcionales.
+              Actualmente cursando Ingeniería de Sistemas en el Centro de Estudios y Especializaciones Internacionales CEIE, con especialización en Soporte de TI certificada por Google y Coursera. Cuento con formación técnica en telecomunicaciones por el SENA y más de 2000 horas de experiencia práctica en soporte técnico. Mi enfoque principal está en la resolución eficiente de problemas de hardware y software, brindando soporte remoto especializado y desarrollando soluciones web personalizadas.
             </p>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
               <p>Clientes Satisfechos</p>
             </div>
           </div><!-- End Stats Item -->
@@ -153,7 +153,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-people"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
               <p>Años de Experiencia</p>
             </div>
           </div><!-- End Stats Item -->
@@ -194,22 +194,29 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Bootstrap Framework</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Atención al Cliente</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Python (Básico)</span> <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
           </div>
 
           <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>Python</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>Soporte Técnico</span> <i class="val">95%</i></span>
@@ -219,9 +226,16 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Atención al Cliente</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Resolución de Problemas</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Mantenimiento de Equipos</span> <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
