--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Angel Muñoz - Desarrollador Full Stack & Ingeniero de Sistemas</title>
-  <meta name="description" content="Portafolio de Angel Muñoz - Desarrollador Full Stack, Ingeniero de Sistemas especializado en soporte técnico y desarrollo web">
-  <meta name="keywords" content="desarrollador, full stack, ingeniero sistemas, soporte técnico, web developer, Colombia">
+  <title>Angel Muñoz - Ingeniero de Sistemas & Especialista en Soporte Técnico</title>
+  <meta name="description" content="Angel Muñoz - Ingeniero de Sistemas con +2000 horas de experiencia en soporte técnico y desarrollo web. Especializado en resolución de problemas y atención al cliente en Pasto, Colombia">
+  <meta name="keywords" content="ingeniero sistemas, soporte técnico, desarrollador web, freelance, Pasto Colombia, resolución problemas, atención cliente">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
+        <img src="assets/img/logo.png" alt="Angel Muñoz Logo">
         <h1 class="sitename">Angel Muñoz</h1>
       </a>
 
@@ -69,14 +69,14 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/27230.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-bg.jpg" alt="Angel Muñoz - Desarrollador Full Stack" class="hero-img" data-aos="fade-in">
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Angel Muñoz</h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Systems Engineer, Help-Desk"></span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Systems Engineer, IT Support Specialist, Web Developer, Freelancer, Problem Solver"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://github.com/AngelMz1" target="_blank"><i class="bi bi-github"></i></a>
-          <a href="https://linkedin.com/in/angel-munoz-benavides" target="_blank"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/angel-mu%C3%B1oz-benavides-4953653a3/" target="_blank"><i class="bi bi-linkedin"></i></a>
           <a href="mailto:munozbenavidesangel@gmail.com"><i class="bi bi-envelope"></i></a>
           <a href="tel:+573207844963"><i class="bi bi-telephone"></i></a>
         </div>
@@ -89,7 +89,7 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Angel Muñoz</h3>
-      <p>Desarrollador Full Stack e Ingeniero de Sistemas con experiencia en soporte técnico y desarrollo de soluciones eficientes.</p>
+      <p>Systems Engineer with +2000 hours of experience in technical support. Specialized in problem solving, web development and exceptional customer service.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/AngelMz1" target="_blank"><i class="bi bi-github"></i></a>
         <a href="https://linkedin.com/in/angel-munoz-benavides" target="_blank"><i class="bi bi-linkedin"></i></a>
